update: spacing fix main class css

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ body {
 
 main {
   min-height: 100vh;
+  padding-top: 1vh;
 }
 
 h1 {
